objects/FieloEE__PublicSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>CacheEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cache Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCH__RewardDeliveryClass__c</fullName>
        <label>Reward Delivery Class</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__ActiveContactsCalculation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Optimized Member Query</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__ChallengesPrefix__c</fullName>
        <label>Challenges Prefix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__ComponentSizePage__c</fullName>
        <description>Quantity of records per page</description>
        <label>Component Size Page</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__CustomPagePreview__c</fullName>
        <label>Custom Preview Page</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__CustomPage__c</fullName>
        <label>Custom Page</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__EditorToolbarExtra__c</fullName>
        <label>Editor Toolbar Extra</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__EditorToolbar__c</fullName>
        <label>Editor Toolbar</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__ExcludeBannerFields__c</fullName>
        <defaultValue>&apos;FieloEE__OverlayText__c&apos;</defaultValue>
        <label>Exclude Banner Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__ExcludeComponentFields__c</fullName>
        <defaultValue>&apos;FieloEE__FieldSet__c,FieloEE__FieldSet2__c,FieloEE__CCS__c,FieloEE__Text__c&apos;</defaultValue>
        <label>Exclude Component Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__ExcludeNewsFields__c</fullName>
        <label>Exclude News Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__Facebook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optimized Component Query</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__FieloVersion__c</fullName>
        <label>Fielo Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Google__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optimized Program Query</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__ImageObject__c</fullName>
        <description>API name of the object to save Images using the &quot;Photo Upload&quot; component (for example &quot;Attachment&quot; or &quot;Document&quot;).</description>
        <inlineHelpText>API name of the object to save Images using the &quot;Photo Upload&quot; component (for example &quot;Attachment&quot; or &quot;Document&quot;).</inlineHelpText>
        <label>Image Object</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Instance__c</fullName>
        <description>Instance (server) used by the Org (Backend)</description>
        <inlineHelpText>Instance (server) used by the Org (Backend)</inlineHelpText>
        <label>Instance</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Linkedin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>zz_deprecated_Linkedin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__MemberCodeClass__c</fullName>
        <label>zz_deprecated_Member Code Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__MenuLanguages__c</fullName>
        <description>Query to show the languages of a Menu</description>
        <label>Menu Languages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__MenuMemberFilter__c</fullName>
        <label>Menu Member Filter Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__NewsView__c</fullName>
        <label>Google Analytics code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__PackagePrefix__c</fullName>
        <label>Package Prefix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__PointCost__c</fullName>
        <label>zz_deprecated_Actual Point Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FieloEE__RewardView__c</fullName>
        <label>Organization-Wide Email Address Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__SearchRewardMenu__c</fullName>
        <label>zz_deprecated_Search Reward Menu</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__ShowVoucherCode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable email for new user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__SiteURL__c</fullName>
        <inlineHelpText>URL of the site used to send the links to continue the registration process</inlineHelpText>
        <label>zz_deprecated_Site URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Twitter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>zz_deprecated_Twitter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__UserCreationClass__c</fullName>
        <label>zz_deprecated_User Creation Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlatformCachePartition__c</fullName>
        <label>Platform Cache Partition</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Public Settings</label>
</CustomObject>